<resources>
    <string name="app_name">Подписка</string>
    <string name="user_name">Имя пользователя</string>
    <string name="subscribe">ОК</string>
    <string name="name">Имя</string>
    <string name="email">Электронная почта</string>
    <string name="clean">Очистить</string>
    <string name="hint_name">Ваше имя</string>
    <string name="hint_email">E-mail</string>
    <string name="subscribe_done">Подписка на рассылку успешно оформлена для пользователя %s на электронный адрес %s</string>
    <string name="subscribe_error">Проверьте правильность введенных данных!</string>
</resources>
